<resources>
    <string name="app_name">Finderest</string>
    <string name="title_profile">Profile</string>
    <string name="title_find">Search</string>
    <string name="title_chats">Chat</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="prompt_name">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">sign up?</string>
    <string name="enter_mail">enter mail</string>
    <string name="enter_password">enter password</string>
    <string name="appImage">appImage</string>
    <string name="appBackground">appImage</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="confirm_it">confirm it</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="set_your_photo">Set your photo</string>
    <string name="put_your_answer">Put your answer</string>
    <string name="next_button">next</string>
    <string name="next">next</string>
    <string name="question">Question</string>
    <string name="login">Log in</string>
    <string name="log_out">Log out</string>
    <string name="end_registration">End registration</string>
    <string name="enter_message">Enter message</string>
    <string name="interests">Interests:</string>
    <string name="about_me">About me:</string>
</resources>