<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chats">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.finderestteam.finderest.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_profile_editor"
            app:destination="@id/navigation_profile_editor" />
    </fragment>

    <fragment
        android:id="@+id/navigation_find"
        android:name="com.finderestteam.finderest.ui.find.FindFragment"
        android:label="@string/title_find"
        tools:layout="@layout/fragment_find" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.finderestteam.finderest.ui.chats.ChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chats" >
        <action
            android:id="@+id/action_navigation_chats_to_navigation_chat"
            app:destination="@id/navigation_chat" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile_editor"
        android:name="com.finderestteam.finderest.ui.profile.ProfileEditor"
        android:label="@string/about_me"
        tools:layout="@layout/fragment_profile_editor" />
    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.finderestteam.finderest.ui.chats.Chat"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chat_with_person" />
</navigation>